--- a/assets/html/register.html
+++ b/assets/html/register.html
@@ -10,7 +10,7 @@
     <link rel="stylesheet" href="/assets/BootstrapV5.3/css/bootstrap.min.css">
     <link rel="stylesheet" href="/assets/css/owl.carousel.min.css">
     <link rel="stylesheet" href="/assets/css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="/assets/css/homeStyle.css">
+    <link rel="stylesheet" href="/assets/css/registerStyle.css">
     <link rel="stylesheet" href="/assets/css/header.css">
     <link rel="stylesheet" href="/assets/css/footer.css">
     <link rel="icon" href="/assets/images/cart.png">
