--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -329,7 +329,7 @@
     <footer>
       <div class="footer-top">
         <div class="container">
-          <div class="row justify-content-around">
+          <div class="row justify-content-between">
             <div class="contact">
               <div class="title">
                 <div>
@@ -340,12 +340,12 @@
               <form action="">
                 <div class="name-email">
                   <input type="text" placeholder="Name"/>
-                  <input type="email" placeholder="Email"/>
+                  <input type="email" placeholder="Enter Your Email"/>
                 </div>
                 <div class="message">
-                  <textarea name="" id="" cols="30" rows="10"></textarea>
+                  <textarea name="" id="" cols="30" rows="10" placeholder="Your Message"></textarea>
                 </div>
-                <button type="submit">Send Message</button>
+                <button type="submit">SEND MESSAGE</button>
               </form>
             </div>
             <div class="subscribe">
@@ -355,34 +355,20 @@
               </div>
               <div class="letter-icon">
                 <svg xmlns="http://www.w3.org/2000/svg" style="display: none">
-                  <symbol id="news-icon" viewBox="0 0 500 500">
+                    <symbol id="news-icon" viewBox="0 0 500 500">
                     <title>news-icon</title>
                     <path
                       d="m494.2,488c0,0 0-225.8 0-301 0-3.1-3.9-7-7.7-9.9l-78.7-57.1v-63.1c0-6.2-5.2-10.4-10.4-10.4h-89.7l-45.7-33.3c-3.1-2.1-8.3-2.1-11.5,0l-45.7,33.3h-89.7c-6.2,0-10.4,5.2-10.4,10.4v62.4l-79.7,57.9c-4.7,2.9-7.7,6.7-7.7,9.9 0,75.7 0,303 0,303 0,5.9 4.7,10 9.6,10.4 0.3,0 0.5,0 0.8,0h456c6.7-0.1 10.5-5.3 10.5-12.5zm-19.8-282.3v263.6l-172.1-137.8 172.1-125.8zm-7.7-18.3l-58.9,42.9v-86.2l58.9,43.3zm-210.9-154.5l18.3,13.5h-36.7l18.4-13.5zm131.2,34.4v178.2l-131.2,95.6-131.2-95.6v-178.2h262.4zm-349.8,138.4l172.1,125.8-172.1,138.6v-264.4zm67.6,25.4l-60.4-44 60.4-43.9v87.9zm-48.9,249.5l170.1-136.9 23.5,17.2c4.5,3.4 7.9,3.4 12.5,0l23.5-17.2 171.1,136.9h-400.7z"
                     ></path>
-                    <rect
-                      width="140.5"
-                      x="186.1"
-                      y="118.3"
-                      height="19.8"
-                    ></rect>
-                    <rect
-                      width="140.5"
-                      x="186.1"
-                      y="181.8"
-                      height="19.8"
-                    ></rect>
-                    <rect
-                      width="140.5"
-                      x="186.1"
-                      y="245.3"
-                      height="19.8"
-                    ></rect>
-                  </symbol></svg
-                ><svg class="icon" viewBox="0 0 30 30">
+                    <rect width="140.5" x="186.1" y="118.3" height="19.8"></rect>
+                    <rect width="140.5" x="186.1" y="181.8" height="19.8"></rect>
+                    <rect width="140.5" x="186.1"y="245.3"height="19.8"></rect>
+                    </symbol></svg>
+                <svg class="icon" viewBox="0 0 30 30">
                   <use xlink:href="#news-icon" x="0%" y="0%"></use>
                 </svg>
               </div>
+              <div></div>
             </div>
           </div>
         </div>
