--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -33,7 +33,7 @@
     <link rel="icon" href="/assets/images/cart.png" />
     <title>Your Store</title>
   </head>
-  <body style="overflow-y: scroll">
+  <body>
     <div class="on-cart d-none"></div>
     <header class="d-flex animate__animated">
       <div class="container">
@@ -454,6 +454,56 @@
           <h5>THE PRODUCTS</h5>
           <h1>Customer Review</h1>
         </div>
+        <div class="owl-carousel owl-theme" style="z-index: 0;">
+          <div class="item">
+            <div class="customer">
+              <div class="avatar">
+                <img src="/assets/images/home/homeCustomer/Testimonial-1.png" alt="">
+              </div>
+              <div class="about">
+                <p>
+									There are many variations of lorem ipsum available, but the have suffered alteration in some form by humour.”Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+								</p>
+              </div>
+              <div class="name-prof">
+                <span>luies charls</span>
+                <span>Web Designer</span>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="customer">
+              <div class="avatar">
+                <img src="/assets/images/home/homeCustomer/Testimonial-2.png" alt="">
+              </div>
+              <div class="about">
+                <p>
+									There are many variations of lorem ipsum available, but the have suffered alteration in some form by humour.”Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+								</p>
+              </div>
+              <div class="name-prof">
+                <span>luies charls</span>
+                <span>Web Designer</span>
+              </div>
+            </div>
+          </div>
+          <div class="item">
+            <div class="customer">
+              <div class="avatar">
+                <img src="/assets/images/home/homeCustomer/Testimonial-3.png" alt="">
+              </div>
+              <div class="about">
+                <p>
+									There are many variations of lorem ipsum available, but the have suffered alteration in some form by humour.”Lorem Ipsum is simply dummy text of the printing and typesetting industry.
+								</p>
+              </div>
+              <div class="name-prof">
+                <span>luies charls</span>
+                <span>Web Designer</span>
+              </div>
+            </div>
+          </div>
+      </div>
       </div>
     </section>
     <section id="latest">
@@ -590,19 +640,19 @@
         <div class="row">
           <div class="owl-carousel owl-theme" style="z-index: 0;">
             <div class="item">
-              <img src="/assets/images/home/brands/Brand-Logo-1-200x60.png" alt="">
+              <img class="animate__animated" src="/assets/images/home/brands/Brand-Logo-1-200x60.png" alt="">
             </div>
             <div class="item">
-              <img src="/assets/images/home/brands/Brand-Logo-2-200x60.png" alt="">
+              <img class="animate__animated" src="/assets/images/home/brands/Brand-Logo-2-200x60.png" alt="">
             </div>
             <div class="item">
-              <img src="/assets/images/home/brands/Brand-Logo-3-200x60.png" alt="">
+              <img class="animate__animated" src="/assets/images/home/brands/Brand-Logo-3-200x60.png" alt="">
             </div>
             <div class="item">
-              <img src="/assets/images/home/brands/Brand-Logo-4-200x60.png" alt="">
+              <img class="animate__animated" src="/assets/images/home/brands/Brand-Logo-4-200x60.png" alt="">
             </div>
             <div class="item">
-              <img src="/assets/images/home/brands/Brand-Logo-5-200x60.png" alt="">
+              <img class="animate__animated" src="/assets/images/home/brands/Brand-Logo-5-200x60.png" alt="">
             </div>
         </div>
         </div>
