--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -24,8 +24,8 @@
       crossorigin="anonymous"
     />
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
-    <link rel="stylesheet" href="/assets/css/owl.carousel.css">
-    <link rel="stylesheet" href="/assets/css/owl.theme.default.css">
+    <link rel="stylesheet" href="/assets/css/owl.carousel.css" />
+    <link rel="stylesheet" href="/assets/css/owl.theme.default.css" />
     <link rel="stylesheet" href="/assets/css/homeStyle.css" />
     <link rel="stylesheet" href="/assets/css/header.css" />
     <link rel="stylesheet" href="/assets/css/footer.css" />
@@ -293,57 +293,39 @@
     </header>
     <section id="slider">
       <div class="slide">
-        <div id="carouselExampleIndicators" class="carousel slide">
-          <div class="carousel-indicators">
-            <button
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="0"
-              class="active a"
-              aria-current="true"
-              aria-label="Slide 1"
-            ></button>
-            <button
-              type="button"
-              data-bs-target="#carouselExampleIndicators"
-              data-bs-slide-to="1"
-              aria-label="Slide 2"
-            ></button>
-          </div>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img
-                src="/assets/images/home/homeSlide/Slider-1-1920x925.png"
-                class="d-block w-100"
-                alt="..."
-              />
-            </div>
-            <div class="carousel-item">
-              <img
-                src="/assets/images/home/homeSlide/Slider-2-1920x925.png"
-                class="d-block w-100"
-                alt="..."
-              />
+        <div class="owl-carousel owl-theme">
+          <div class="item">
+            <img
+              src="/assets/images/home/homeSlide/Slider-1-1920x925.png"
+              alt=""
+            />
+            <div class="title animate__animated animate__fadeInDown">
+              <h4>Clear 4k Camera</h4>
+              <h1>Underwater Drone</h1>
+              <p>
+                Lorem ipsum, or lipsum as it is sometimes known, is dummy text
+                used in laying out print, graphic or web designs. The passage is
+                attributed to an unknown typesetter in the 15th century.
+              </p>
+              <button>SHOP NOW</button>
             </div>
           </div>
-          <button
-            class="carousel-control-prev"
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="prev"
-          >
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Previous</span>
-          </button>
-          <button
-            class="carousel-control-next"
-            type="button"
-            data-bs-target="#carouselExampleIndicators"
-            data-bs-slide="next"
-          >
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="visually-hidden">Next</span>
-          </button>
+          <div class="item">
+            <img
+              src="/assets/images/home/homeSlide/Slider-2-1920x925.png"
+              alt=""
+            />
+            <div class="second title animate__animated animate__fadeInDown">
+              <h4>Clear 4k Camera</h4>
+              <h1>Fast Drone Delivery</h1>
+              <p>
+                Lorem ipsum, or lipsum as it is sometimes known, is dummy text
+                used in laying out print, graphic or web designs. The passage is
+                attributed to an unknown typesetter in the 15th century.
+              </p>
+              <button>SHOP NOW</button>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -454,16 +436,21 @@
           <h5>THE PRODUCTS</h5>
           <h1>Customer Review</h1>
         </div>
-        <div class="owl-carousel owl-theme" style="z-index: 0;">
+        <div class="owl-carousel owl-theme" style="z-index: 0">
           <div class="item">
             <div class="customer">
               <div class="avatar">
-                <img src="/assets/images/home/homeCustomer/Testimonial-1.png" alt="">
+                <img
+                  src="/assets/images/home/homeCustomer/Testimonial-1.png"
+                  alt=""
+                />
               </div>
               <div class="about">
                 <p>
-									There are many variations of lorem ipsum available, but the have suffered alteration in some form by humour.”Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-								</p>
+                  There are many variations of lorem ipsum available, but the
+                  have suffered alteration in some form by humour.”Lorem Ipsum
+                  is simply dummy text of the printing and typesetting industry.
+                </p>
               </div>
               <div class="name-prof">
                 <span>luies charls</span>
@@ -474,12 +461,17 @@
           <div class="item">
             <div class="customer">
               <div class="avatar">
-                <img src="/assets/images/home/homeCustomer/Testimonial-2.png" alt="">
+                <img
+                  src="/assets/images/home/homeCustomer/Testimonial-2.png"
+                  alt=""
+                />
               </div>
               <div class="about">
                 <p>
-									There are many variations of lorem ipsum available, but the have suffered alteration in some form by humour.”Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-								</p>
+                  There are many variations of lorem ipsum available, but the
+                  have suffered alteration in some form by humour.”Lorem Ipsum
+                  is simply dummy text of the printing and typesetting industry.
+                </p>
               </div>
               <div class="name-prof">
                 <span>luies charls</span>
@@ -490,12 +482,17 @@
           <div class="item">
             <div class="customer">
               <div class="avatar">
-                <img src="/assets/images/home/homeCustomer/Testimonial-3.png" alt="">
+                <img
+                  src="/assets/images/home/homeCustomer/Testimonial-3.png"
+                  alt=""
+                />
               </div>
               <div class="about">
                 <p>
-									There are many variations of lorem ipsum available, but the have suffered alteration in some form by humour.”Lorem Ipsum is simply dummy text of the printing and typesetting industry.
-								</p>
+                  There are many variations of lorem ipsum available, but the
+                  have suffered alteration in some form by humour.”Lorem Ipsum
+                  is simply dummy text of the printing and typesetting industry.
+                </p>
               </div>
               <div class="name-prof">
                 <span>luies charls</span>
@@ -503,7 +500,7 @@
               </div>
             </div>
           </div>
-      </div>
+        </div>
       </div>
     </section>
     <section id="latest">
@@ -638,23 +635,43 @@
     <section id="brands">
       <div class="container">
         <div class="row">
-          <div class="owl-carousel owl-theme" style="z-index: 0;">
+          <div class="owl-carousel owl-theme" style="z-index: 0">
             <div class="item">
-              <img class="animate__animated" src="/assets/images/home/brands/Brand-Logo-1-200x60.png" alt="">
+              <img
+                class="animate__animated"
+                src="/assets/images/home/brands/Brand-Logo-1-200x60.png"
+                alt=""
+              />
             </div>
             <div class="item">
-              <img class="animate__animated" src="/assets/images/home/brands/Brand-Logo-2-200x60.png" alt="">
+              <img
+                class="animate__animated"
+                src="/assets/images/home/brands/Brand-Logo-2-200x60.png"
+                alt=""
+              />
             </div>
             <div class="item">
-              <img class="animate__animated" src="/assets/images/home/brands/Brand-Logo-3-200x60.png" alt="">
+              <img
+                class="animate__animated"
+                src="/assets/images/home/brands/Brand-Logo-3-200x60.png"
+                alt=""
+              />
             </div>
             <div class="item">
-              <img class="animate__animated" src="/assets/images/home/brands/Brand-Logo-4-200x60.png" alt="">
+              <img
+                class="animate__animated"
+                src="/assets/images/home/brands/Brand-Logo-4-200x60.png"
+                alt=""
+              />
             </div>
             <div class="item">
-              <img class="animate__animated" src="/assets/images/home/brands/Brand-Logo-5-200x60.png" alt="">
+              <img
+                class="animate__animated"
+                src="/assets/images/home/brands/Brand-Logo-5-200x60.png"
+                alt=""
+              />
             </div>
-        </div>
+          </div>
         </div>
       </div>
     </section>
