--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -296,7 +296,7 @@
                 <use xlink:href="#shopping-cart" x="12%" y="16%"></use>
               </svg>
               <sup>0</sup>
-              <div class="cart-drop animate__animated d-none">
+              <div class="cart-drop d-none">
                 <div class="cart-top d-flex">
                   <span>CART</span>
                   <svg
@@ -365,7 +365,7 @@
               alt=""
             />
             <img class="d-lg-none d-md-none" src="/assets/images/home/homeSlide//Slider-1-543x460.png" alt="">
-            <div class="title animate__animated animate__fadeInDown">
+            <div class="col-md-6 title animate__animated animate__fadeInDown">
               <h4>Clear 4k Camera</h4>
               <h1>Underwater Drone</h1>
               <p>
@@ -382,7 +382,7 @@
               alt=""
             />
             <img class="d-lg-none d-md-none" src="/assets/images/home/homeSlide/Slider-2-543x460.png" alt="">
-            <div class="second title animate__animated animate__fadeInDown">
+            <div class="second col-md-6 title animate__animated animate__fadeInDown">
               <h4>Clear 4k Camera</h4>
               <h1>Fast Drone Delivery</h1>
               <p>
