--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -26,6 +26,7 @@
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <link rel="stylesheet" href="/assets/css/owl.carousel.css" />
     <link rel="stylesheet" href="/assets/css/owl.theme.default.css" />
+    <link rel="stylesheet" href="/assets/css/slick.css">
     <link rel="stylesheet" href="/assets/css/homeStyle.css" />
     <link rel="stylesheet" href="/assets/css/header.css" />
     <link rel="stylesheet" href="/assets/css/footer.css" />
@@ -296,60 +297,6 @@
                 <use xlink:href="#shopping-cart" x="12%" y="16%"></use>
               </svg>
               <sup>0</sup>
-              <div class="cart-drop d-none">
-                <div class="cart-top d-flex">
-                  <span>CART</span>
-                  <svg
-                    width="800px"
-                    height="800px"
-                    viewBox="0 0 1024 1024"
-                    fill="#000000"
-                    class="icon"
-                    version="1.1"
-                    xmlns="http://www.w3.org/2000/svg"
-                  >
-                    <path
-                      d="M176.662 817.173c-8.19 8.471-7.96 21.977 0.51 30.165 8.472 8.19 21.978 7.96 30.166-0.51l618.667-640c8.189-8.472 7.96-21.978-0.511-30.166-8.471-8.19-21.977-7.96-30.166 0.51l-618.666 640z"
-                      fill=""
-                    />
-                    <path
-                      d="M795.328 846.827c8.19 8.471 21.695 8.7 30.166 0.511 8.471-8.188 8.7-21.694 0.511-30.165l-618.667-640c-8.188-8.471-21.694-8.7-30.165-0.511-8.471 8.188-8.7 21.694-0.511 30.165l618.666 640z"
-                      fill=""
-                    />
-                  </svg>
-                </div>
-                <div class="cart-list">
-                  <ul class="product-list">
-                    <li>
-                      <p>Your shopping cart is empty!</p>
-                    </li>
-                  </ul>
-                </div>
-                <div class="cart-bottom">
-                  <ul>
-                    <li>
-                      <span>Sub-Total</span>
-                      <span>$<span>0</span></span>
-                    </li>
-                    <li>
-                      <span>Eco Tax (-2)</span>
-                      <span>$<span>0</span></span>
-                    </li>
-                    <li>
-                      <span>VAT (20%)</span>
-                      <span>$<span>0</span></span>
-                    </li>
-                    <li>
-                      <span>Total</span>
-                      <span>$<span>0</span></span>
-                    </li>
-                  </ul>
-                  <div class="buttons">
-                    <button>VIEW CART</button>
-                    <button>CHECKOUT</button>
-                  </div>
-                </div>
-              </div>
               <!-- <div class="cart-drop"></div> -->
             </div>
           </div>
@@ -575,6 +522,19 @@
         <div class="title">
           <h5>THE LATEST</h5>
           <h1>Fabulous Products</h1>
+        </div>
+        <div class="category">
+          <ul>
+            <li>
+              <a href="" class="active">featured</a>
+            </li>
+            <li>
+              <a href="">best sellers</a>
+            </li>
+            <li>
+              <a href="">new Arrivals</a>
+            </li>
+          </ul>
         </div>
       </div>
     </section>
@@ -1009,7 +969,9 @@
       crossorigin="anonymous"
     ></script>
     <script src="/assets/js/owl.carousel.js"></script>
+    <script src="/assets/js/slick.js"></script>
     <script src="/assets/js/home.js"></script>
     <script src="/assets/js/header.js"></script>
+    <script src="/assets/js/footer.js"></script>
   </body>
 </html>
