--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -706,7 +706,7 @@
       <div class="footer-top">
         <div class="container">
           <div class="row justify-content-between">
-            <div class="contact col-lg-6 col-sm-12">
+            <div class="contact">
               <div class="title">
                 <div>
                   <h5>Contact</h5>
@@ -730,7 +730,7 @@
                 <button type="submit">SEND MESSAGE</button>
               </form>
             </div>
-            <div class="subscribe col-lg-6 col-sm-12">
+            <div class="subscribe">
               <div class="title">
                 <h5>subscribe</h5>
                 <h1>Newsletter</h1>
