--- a/assets/html/home.html
+++ b/assets/html/home.html
@@ -312,7 +312,7 @@
               alt=""
             />
             <img class="d-lg-none d-md-none" src="/assets/images/home/homeSlide//Slider-1-543x460.png" alt="">
-            <div class="col-md-6 title animate__animated animate__fadeInDown">
+            <div class="title animate__animated animate__fadeInDown">
               <h4>Clear 4k Camera</h4>
               <h1>Underwater Drone</h1>
               <p>
@@ -329,7 +329,7 @@
               alt=""
             />
             <img class="d-lg-none d-md-none" src="/assets/images/home/homeSlide/Slider-2-543x460.png" alt="">
-            <div class="second col-md-6 title animate__animated animate__fadeInDown">
+            <div class="title animate__animated animate__fadeInDown">
               <h4>Clear 4k Camera</h4>
               <h1>Fast Drone Delivery</h1>
               <p>
